  - GWEN_DBIO_GetPluginPath
  - GWEN_DBIO_GetLibLoader
  - GWEN_DBIO_SetLibLoader
  - GWEN_DBIO_Register
  - GWEN_DBIO_LoadPluginFile
  - GWEN_DBIO_LoadPlugin
  Normally these changes should lead to an increased major version number,
  but until now only AqBanking uses GWEN_DBIOs so we just increment the minor
  version number and hope to get away with it (which we will if nobody else
  is using GWEN_DBIOs)


===========================================================================
MARK: released gwenhywfar-1.15.0 (2005/08/11)
===========================================================================


2005/08/10: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- msgengine now honours the attribute "size" in generic types
- fixed a bug in GWEN_Time_fromString (error when using only two digits for
  the year)


2005/08/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added definition GWEN_WAITCALLBACK_PROGRESS_ONE
- waitcallback flags are now stored within the waitcallback upon enter


2005/08/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added extern "C" to crypttoken header files


2005-08-04  Christian Stimming <stimming@tuhh.de>

	* src/os/windows/fslock.c: Update windows code to latest changes.


2005/08/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- more work on crypttoken
- removed some crypttoken flags
- added crypttoken flag GWEN_CRYPTTOKEN_FLAGS_FORCE_PIN_ENTRY
- added getpin flag GWEN_CRYPTTOKEN_GETPIN_FLAGS_ALLOW_DEFAULT


2005/08/01: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_KeySpec_toDb()
- added function GWEN_KeySpec_fromDb()
- fixed a bug in PluginDescr loading code
- fixed a bug in GWEN_Buffer_dup()
- added GWEN_CryptManager_CheckToken()