@@ -38,6 +38,9 @@
 #define GWENHYWFAR_VERSION_FULL_STRING "@GWENHYWFAR_VERSION_FULL_STRING@"
 #define GWENHYWFAR_VERSION_STRING "@GWENHYWFAR_VERSION_STRING@"
 
+#define GWENHYWFAR_SO_EFFECTIVE @GWENHYWFAR_SO_EFFECTIVE@
+#define GWENHYWFAR_SO_EFFECTIVE_STR "@GWENHYWFAR_SO_EFFECTIVE@"
+
 
 #endif /* GWENHYWFAR_VERSION_H */
 
